# proxy

./: .bazelrc  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  LICENSE  MODULE.bazel  README.md  SECURITY.md  SUPPORT.md  meson.build  meson.options  mkdocs.yml  renovate.json
.github/workflows/: bvt-appleclang.yml  bvt-clang.yml  bvt-compatibility.yml  bvt-gcc.yml  bvt-lint.yml  bvt-msvc.yml  bvt-nvhpc.yml  bvt-oneapi.yml  bvt-report.yml  mkdocs.yml  pipeline-bump-cpp-deps.yml  pipeline-bump-renovate-deps.yml  pipeline-ci.yml  pipeline-pages.yml  pipeline-release.yml
benchmarks/: CMakeLists.txt  meson.build  proxy_creation_benchmark.cpp  proxy_operation_benchmark.cpp  proxy_operation_benchmark_context.cpp  proxy_operation_benchmark_context.h
cmake/: dependencies.json  read_dependencies.cmake
docs/: BUILD.bazel  CMakeLists.txt  faq.md  meson.build
docs/spec/: .pages  PRO_DEF_FREE_AS_MEM_DISPATCH.md  PRO_DEF_FREE_DISPATCH.md  PRO_DEF_MEM_DISPATCH.md  ProAccessible.md  ProBasicReflection.md  ProFacade.md  ProReflection.md  README.md  make_proxy_observed.md  make_proxy_ref.md  make_proxy_view.md  msft_lib_proxy.md  proxiable_target.md  proxy_invoke.md  proxy_reflect.md  proxy_view.md  skills_as_view.md
docs/spec/basic_facade_builder/: .pages  README.md  add_facade.md  add_facade_with_substitution.md  add_reflection.md
docs/spec/explicit_conversion_dispatch/: accessor.md
docs/spec/implicit_conversion_dispatch/: accessor.md
docs/spec/operator_dispatch/: accessor.md
docs/spec/proxy/: .pages  README.md  assignment.md  constructor.md  friend_invoke.md  friend_reflect.md  friend_reinterpret_invoke.md  indirection.md  invoke.md  reflect.md  reinterpret_invoke.md
docs/spec/proxy_indirect_accessor/: .pages  README.md  friend_invoke.md  friend_reflect.md  friend_reinterpret_invoke.md  invoke.md  reflect.md  reinterpret_invoke.md
docs/spec/skills_rtti/: README.md
docs/spec/substitution_dispatch/: accessor.md
include/proxy/: proxy.h  proxy_fmt.h  proxy_macros.h
include/proxy/v4/: proxy.h  proxy.ixx  proxy_fmt.h  proxy_macros.h
include/proxy/v4/detail/: compatibility_check.h  core.h
mkdocs/: requirements.txt
mkdocs/overrides/: main.html
tests/: BUILD.bazel  CMakeLists.txt  meson.build  proxy_creation_tests.cpp  proxy_details_tests.cpp  proxy_dispatch_tests.cpp  proxy_fmt_format_no_wchar_tests.cpp  proxy_fmt_format_tests.cpp  proxy_format_tests.cpp  proxy_integration_tests.cpp  proxy_invocation_tests.cpp  proxy_lifetime_tests.cpp  proxy_reflection_tests.cpp  proxy_regression_tests.cpp  proxy_rtti_tests.cpp  proxy_traits_tests.cpp  proxy_view_tests.cpp  utils.h
tests/freestanding/: CMakeLists.txt  meson.build  proxy_freestanding_module_tests.cpp
tests/modules/: CMakeLists.txt
tools/: BUILD.bazel  bump_cmake_meson_deps.py  doc_examples.bzl  extract_example_code.py  gen_doc_examples.py
tools/report_generator/: CMakeLists.txt  dependencies.json  main.cpp
