module(
    name = "proxy",
    version = "4.0.2",
)

bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)
bazel_dep(name = "google_benchmark", version = "1.9.5", dev_dependency = True)
bazel_dep(name = "fmt", version = "12.1.0", dev_dependency = True)
bazel_dep(name = "rules_python", version = "2.0.2", dev_dependency = True)

python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
python.toolchain(python_version = "3.12", is_default = True)
use_repo(python, bootstrap_python = "python_3_12_host")

use_repo_rule("//tools:doc_examples.bzl", "doc_examples")(name = "doc_examples")
