option(
  'tests',
  type: 'feature',
  value: 'auto',
  description: 'Build tests',
)
option(
  'benchmarks',
  type: 'feature',
  value: 'auto',
  description: 'Build benchmarks',
)
option(
  'doc_tests',
  type: 'boolean',
  value: true,
  description: 'Build and run tests extracted from docs (requires tests)',
)
